security/network-policies/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netpol-demo
  labels:
    istio-injection: disabled
