security/network-policies/nginx-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-demo
  namespace: netpol-demo
  labels:
    app: nginx-demo
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: netpol-demo
spec:
  selector:
    app: nginx-demo
  ports:
  - port: 80
    targetPort: 80
