security/network-policies/allow-nginx-http.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-http
  namespace: netpol-demo
spec:
  podSelector:
    matchLabels:
      app: nginx-demo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: nginx
    ports:
    - protocol: TCP
      port: 80
