security/network-policies/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: nginx-web
spec:
  podSelector: {}
  policyTypes:
  - Ingress
